Like Instafonts.io

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Cool Text Generator : AnujWebs&lt;/&gt;</title>
+    <title>Cool Text Generator : PROVIDERBOTZ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
     <meta name="theme-color" content="#FF00FF">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -1171,7 +1171,7 @@
         <div class="footer-card">
             <h2>AnujWebs&lt;/&gt;</h2>
             <p>JOIN OUR TELEGRAM CHANNEL FOR MORE FREE OPEN SOURCE WEBSITE CODES.</p>
-            <a href="https://t.me/+J-GKHRyxaRVkZDE1" class="btn-more">
+            <a href="https://t.me/Providerbotz" class="btn-more">
                 <i class="fab fa-telegram"></i> CLICK TO JOIN TELEGRAM
             </a>
             <div style="margin-top: 15px; font-size: 12px; opacity: 0.8;">
